MinionExtractBaselines: make not required params actually not required. improve flow a bit Layoutproc: avoid opencv realloc in getBinaryLineStrip MinionDetectLanguageOfPageXml: only try to read pom.xml when pom.xml is actually present